<resources>
    <string name="app_name">http</string>
    <string name="login_title">北极熊配送端</string>
    <string name="login_userName">用户名:</string>
    <string name="login_passWord">密     码:</string>
    <string name="login_auto">自动登录</string>
    <string name="login_rember">记住用户名</string>

    <string name="login_button">登录</string>
    <string name="login_exit">退出</string>


    <string name="nav_home">首页</string>
    <string name="nav_new">新单</string>
    <string name="nav_over">完成</string>
    <string name="nav_mine">个人中心</string>
</resources>
