<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="368dp"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/nav_new"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/nav_icon_dashboard"
            android:gravity="center"
            android:text="@string/nav_new"/>

        <TextView
            android:id="@+id/nav_over"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/nav_icon_menu"
            android:gravity="center"
            android:text="@string/nav_over"/>

        <TextView
            android:id="@+id/nav_index"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/nav_icon_home"
            android:gravity="center"
            android:text="@string/nav_home"/>

        <TextView
            android:id="@+id/nav_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/nav_icon_user"
            android:gravity="center"
            android:text="@string/nav_mine"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>