<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/login_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bjx.www.http.LoginActivity">


    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:text="@string/login_title"
        android:textColor="@color/grey"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503"/>

    <EditText
        android:id="@+id/PassWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/UserName"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/UserName_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_userName"
        app:layout_constraintRight_toLeftOf="@+id/UserName"
        android:layout_marginRight="7dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/Title"/>

    <TextView
        android:id="@+id/PassWord_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_passWord"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/UserName"
        app:layout_constraintRight_toLeftOf="@+id/PassWord"
        android:layout_marginRight="8dp"/>

    <Button
        android:id="@+id/Btn_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassWord_lable"/>
</android.support.constraint.ConstraintLayout>
